--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.85.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
