--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "sass": "^1.85.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yocto-queue": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
